RESOLVED FIXED 49172
REGRESION (r71418): Can't compare new Windows pixel results to existing Windows or Mac results
https://bugs.webkit.org/show_bug.cgi?id=49172
Summary REGRESION (r71418): Can't compare new Windows pixel results to existing Windo...
Adam Roben (:aroben)
Reported 2010-11-08 06:10:08 PST
REGRESION (r71418): Can't compare new Windows pixel results to existing Windows or Mac results
Attachments
Patch (2.35 KB, patch)
2010-11-08 06:11 PST, Adam Roben (:aroben)
koivisto: review+
Adam Roben (:aroben)
Comment 1 2010-11-08 06:11:00 PST
Eric Seidel (no email)
Comment 2 2010-12-14 01:45:25 PST
Comment on attachment 73235 [details] Patch Looks like this can be landed, no?
Adam Roben (:aroben)
Comment 3 2010-12-14 07:44:24 PST
It turns out this isn't needed. The pixel results I was working with only contained alpha due to bugs. No Windows pixel results should contain alpha, so this shouldn't be an issue. But by specifying kCGImageAlphaPremultipliedFirst, rather than throwing away the alpha, we can discover bugs that cause alpha to be written into the image.
Adam Roben (:aroben)
Comment 4 2011-05-05 12:56:18 PDT
(In reply to comment #3) > It turns out this isn't needed. The pixel results I was working with only contained alpha due to bugs. No Windows pixel results should contain alpha, so this shouldn't be an issue. But by specifying kCGImageAlphaPremultipliedFirst, rather than throwing away the alpha, we can discover bugs that cause alpha to be written into the image. Wow, this comment is very confused! This patch was needed. It was landed in r71516.
Note You need to log in before you can comment on or make changes to this bug.